--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -19,4 +19,10 @@ dependencies {
 
 test {
 	useJUnitPlatform()
+	testImplementation 'junit:junit:4.12'
+}
+
+test {
+        useMockitoPlatform()
+        testImplementation 'org.mockito:mockito-core:3.3.3'
 }
